# Vector

./: .env.example  .gitignore  .gitleaksignore  .hadolint.yaml  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Domain_inventory.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  domain.md
backend/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  alembic.ini  fly.collect.toml  fly.core.toml  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 109044f13a69_add_weekly_trends_snapshots_table.py  1250a92960a5_remove_entity_type_enum_constraint_and_.py  1ee30c910254_split_analysis_pipeline.py  2d02a83aa90f_add_users_and_refresh_tokens.py  3a9bf03a0b5f_add_content_fields_to_news_articles.py  42a07fc6d36d_add_fetch_logs_check_constraints.py  4592638692be_add_embedding_consistency_check.py  4bda779a1d5e_add_content_fetch_attempts_to_news_.py  4bf262125474_add_embedding_to_news_articles.py  4d16d9b326a0_drop_topics_inline_topic_phrase.py  640eb6c829eb_add_topic_id_analyzed_at_composite_.py  6640e41ea840_topics_label_ja_not_null.py  6b3f8ec9a583_add_article_analyses_check_constraints.py  739f1cf06fae_topics_reset_and_seed.py  7b90b86f5207_add_news_articles_check_constraints.py  9304ea71c183_drop_article_analyses_impact_level.py  96bbf386b459_article_analyses_impact_level_nullable.py  a1_add_news_sources.py  a1_assessments_add_events.py  a1b2c3d4e5f6_add_revoked_at_to_refresh_tokens.py  a1b2c3d4e5f6_split_analysis_pipeline.py  a2_add_source_id_and_guid_to_news_articles.py  a2_drop_extraction_entities.py  a3_drop_assessment_topic.py  a3_seed_news_sources.py  a4_drop_news_sources_category_id.py  a5_normalize_ai_model.py  a6_create_fetch_logs.py  a7_seed_default_ai_model.py  a7e2c1f4b830_add_news_sources_name_check_constraint.py  a8_add_article_groups.py  a9_add_role_to_users.py  aa1_pending_source_name_add.py  aa2_pending_source_name_backfill.py  aa3_pending_source_name_constraints.py  aa3_pending_source_name_nn_fk.py  b1_better_auth_schema_migration.py  b2934b631768_topics_reset_v2.py  b2c3d4e5f6g7_drop_news_articles.py  b751d5bc7311_create_initial_tables.py  (+132 more)
backend/app/: brokers.py  config.py  db.py  db_ssl.py  dependencies.py  exception_handlers.py  exceptions.py  logfire_exceptions.py  logfire_setup.py  main.py  redis.py
backend/app/admin/: __init__.py  router.py
backend/app/agent/: __init__.py  agent.py  composition.py  contract.py  router.py
backend/procfiles/: Procfile.fetch  Procfile.insights  Procfile.scheduler
backend/scripts/: compare_assessors.py  compare_classifiers.py  inspect_events.py  investigate_similarity.py  migration_gate.py  pipeline_queue_status.py  poc_deepseek_classifier.py  probe_question_answering.py  probe_tavily_search.py  promote_admin.py  reclassify_all.py  redact_schemathesis_artifacts.py  seed_e2e_research.py  seed_e2e_users.py
backend/specs/: acquisition-completion-queue-separation-slice.md  agent-answer-requirement-tracking-slice.md  agent-answer-streaming-sse.md  agent-answering-runner-boundary-slice.md  agent-attempt-epoch-fencing-token-slice.md  agent-audit-recorder-removal-slice.md  agent-citation-link-rendering-slice.md  agent-conversation-context-slice.md  agent-conversations-runs-boundary-slice.md  agent-declaration-runner-orchestration-slice.md  agent-direct-answer-deltas-slice.md  agent-evidence-answer-composition-slice.md  agent-evidence-answer-draft-deltas-slice.md  agent-history-run-execution-slice.md  agent-history-schema-slice.md  agent-history-thread-ui-slice.md  agent-input-safety-gate-slice.md  agent-live-event-producer-wiring-slice.md  agent-live-stream-transport-slice.md  agent-live-updates-boundary-slice.md  agent-progress-forward-merge-slice.md  agent-question-context-preparation-slice.md  agent-research-run-continuity-slice.md  agent-run-live-events-slice.md  agent-run-progress-stage-slice.md  agent-run-timeout-terminalization-slice.md  agent-search-transparency-live-ui-slice.md  agent-source-display-contract-slice.md  agent-sse-backend-bff-slice.md  agent-threads-runs-boundary-slice.md  agent-user-daily-request-quota-slice.md  answer-agents-streaming-runtime-slice.md  answering-workflow-ownership-slice.md  curation-assessment-queue-separation-slice.md  evidence-collection-failure-continuation-slice.md  evidence-collection-internal-search-failure-continuation-slice.md  external-pipeline-ownership-slice.md  external-query-selector-agent-runtime-slice.md  external-research-runtime-factory-slice.md  external-search-deepseek-adapters-slice.md  (+25 more)
backend/supervisord/: agent.conf  analysis.conf  fail_fast.py  fetch.conf  insights.conf  scheduler.conf
backend/tests/: AGENTS.md  CLAUDE.md  conftest.py  test_agent_attempt_epoch_migration.py  test_agent_history_db_contract.py  test_agent_policy_blocked_migration.py  test_agent_user_daily_quota_migration.py  test_ai_analyzer.py  test_alpha_vantage.py  test_analysis_extraction_repository.py  test_analysis_hold_helpers.py  test_analysis_hold_metrics.py  test_analysis_tasks.py  test_analyzed_articles_db_contract.py  test_article_body_fetcher.py  test_article_candidate.py  test_article_persister.py  test_article_url_model.py  test_articles_service.py  test_audit_payloads.py  test_audit_recording.py  test_backfill_audit_tasks.py  test_backfill_backlog_metrics.py  test_backfill_core_metrics.py  test_brokers.py  test_brokers_otel_middleware.py  test_classification_domain.py  test_config.py  test_content_extractor.py  test_content_service.py  test_content_tasks.py  test_curation_hold_metrics.py  test_db_application_name.py  test_db_ssl.py  test_db_user_isolation.py  test_dedup.py  test_dependencies_jwt.py  test_discovered_article_repository.py  test_docs_gate.py  test_embedder_stub.py  (+64 more)
(+2570 files in other folders)
