[project]
name = "vector-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "bcrypt>=4.0,<6",
    "email-validator>=2.0,<3",
    "fastapi>=0.136.1,<1",
    "feedparser>=6.0,<7",
    "google-genai>=1.73.1,<2",
    "greenlet>=3.4.0",
    "httpx>=0.28,<1",
    "lxml>=6.1.0,<7",
    "trafilatura>=2.0,<3",
    "pydantic-settings>=2.14.0,<3",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "python-jose[cryptography]>=3.5.0,<4",
    "ruff>=0.15.12,<1",
    "sqlmodel>=0.0.38,<1",
    "structlog>=24.4,<26",
    "pgvector>=0.3.0,<1",
    "taskiq>=0.12.2,<1",
    "taskiq-redis>=1.0,<2",
    "uvicorn[standard]>=0.46.0,<1",
    "redis>=7.4.0,<8",
    "openai>=2.32.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "FAST", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"httpx.AsyncClient".msg = "Use app.shared.security.safe_http.make_safe_async_client instead. Direct httpx.AsyncClient bypasses SSRF defense."

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S311", "TID251"]
"app/shared/security/safe_http.py" = ["TID251"]
"app/analysis/embedder/ruri.py" = ["TID251"]
# fetcher は呼び出し側 (Service) から AsyncClient を受け取って使う側なので、
# 型ヒントとしての参照のみ。本ファイル群で AsyncClient を直接構築することはない。
"app/collection/ingestion/fetchers/**" = ["TID251"]
"app/collection/ingestion/tools/**" = ["TID251"]
"app/collection/ingestion/registry.py" = ["TID251"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: DB やネットワークを必要としない純粋なロジック・ドメイン層のテスト",
    "integration: 実 DB / httpx Client / 外部 IO を実体的に使うテスト",
]
